WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205873
REGRESSION: [ Mac wk2 ] fast/mediastream/captureInGPUProcess.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=205873
Summary
REGRESSION: [ Mac wk2 ] fast/mediastream/captureInGPUProcess.html is a flaky ...
Truitt Savell
Reported
2020-01-07 11:13:21 PST
fast/mediastream/captureInGPUProcess.html Description: This test was introduced as a flaky failure in
https://trac.webkit.org/changeset/254130/webkit
History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2FcaptureInGPUProcess.html
Diff: --- /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/fast/mediastream/captureInGPUProcess-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/fast/mediastream/captureInGPUProcess-actual.txt @@ -1,5 +1,7 @@ +CONSOLE MESSAGE: Failed to create MediaStream audio source: +CONSOLE MESSAGE: Failed to create MediaStream video source: -PASS Play audio captured in GPU process -PASS Play video captured in GPU process +FAIL Play audio captured in GPU process promise_test: Unhandled rejection with value: object "NotReadableError: The I/O read operation failed." +FAIL Play video captured in GPU process promise_test: Unhandled rejection with value: object "NotReadableError: The I/O read operation failed."
Attachments
Patch
(13.77 KB, patch)
2020-01-09 02:56 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-07 11:13:38 PST
<
rdar://problem/58380638
>
youenn fablet
Comment 2
2020-01-07 12:02:02 PST
It probably needs to update TestOptions::hasSameInitializationOptions to account for capture in GPU process.
youenn fablet
Comment 3
2020-01-08 01:38:03 PST
Cannot repro locally and bots seem happy now.
Truitt Savell
Comment 4
2020-01-08 12:14:53 PST
This test is failing again according to the history as of around
r254194
youenn fablet
Comment 5
2020-01-09 02:56:23 PST
Created
attachment 387208
[details]
Patch
WebKit Commit Bot
Comment 6
2020-01-09 07:58:23 PST
Comment on
attachment 387208
[details]
Patch Clearing flags on attachment: 387208 Committed
r254259
: <
https://trac.webkit.org/changeset/254259
>
WebKit Commit Bot
Comment 7
2020-01-09 07:58:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug