REGRESSION: [ Mac wk2 ] fast/mediastream/captureInGPUProcess.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=205873 <rdar://problem/58380638>

Reviewed by Eric Carlson.

Source/WebCore:

Beef up reporting of error cases when device is not found for a getUserMedia call.
Covered by unflaked test.

* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::create):
* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::create):
* platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockRealtimeAudioSource::create):
* platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
(WebCore::MockRealtimeVideoSource::create):
* platform/mock/MockRealtimeAudioSource.cpp:
(WebCore::MockRealtimeAudioSource::create):
* platform/mock/MockRealtimeMediaSourceCenter.cpp:
* platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::create):

Source/WebKit:

GPUProcess and UIProcess were sometimes getting out of sync with regards to using mock devices or real capture devices.
This ended up in GPUProcess trying to find mock devices based on real device IDs.
Fix this issue by storing this bool value in GPUProcessProxy and send IPC to GPUProcess whenver this value is changed.
Update GPUProcessProxy value whenever UserMediaPermissionRequestManagerProxy is asked to sync this value.

* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::singleton):
(WebKit::GPUProcessProxy::GPUProcessProxy):
(WebKit::GPUProcessProxy::setUseMockCaptureDevices):
* UIProcess/GPU/GPUProcessProxy.h:
* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::syncWithWebCorePrefs const):


Canonical link: https://commits.webkit.org/219115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254259 268f45cc-cd09-0410-ab3c-d52691b4dbfc