Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm
@@ -93,7 +93,7 @@ CaptureSourceOrError MockRealtimeAudioSource::create(String&& deviceID, String&&
     auto device = MockRealtimeMediaSourceCenter::mockDeviceWithPersistentID(deviceID);
     ASSERT(device);
     if (!device)
-        return { };
+        return { "No mock microphone device"_s };
 #endif
     return CoreAudioCaptureSource::createForTesting(WTFMove(deviceID),  WTFMove(name), WTFMove(hashSalt), constraints, MockAudioSharedUnit::singleton());
 }
